themes/slender/sass/style.scss
@use "sass:map";
@import "_normalize.scss";
@import "_animations.scss";
@import "_theme.scss";
@import "_mixins.scss";

html {
	color: $color-text;
	background-color: $color-background;
	letter-spacing: 0.06em;
	font-family: trebuchet ms, Verdana, verdana ref, segoe ui, Candara,
		lucida grande, lucida sans unicode, lucida sans, Tahoma, sans-serif;
}

.app-header {
	background-color: $color-header-background;
	position: sticky;
	top: 0;
	width: 100%;
	z-index: 100;
	display: flex;
	justify-content: space-between;
	align-items: center;
	user-select: none;

	@include isMobile() {
		flex-direction: column;
	}

	a {
		font-size: 1.1em;

		&.active {
			color: $color-header-active;
			text-shadow: 0 0 1px $color-text-shadow;
		}
	}

	svg {
		width: 24px;
		height: 24px;
		fill: $color-svg-fill;
	}

	nav,
	.socials {
		display: flex;

		@include isMobile() {
			width: 100%;

			a {
				flex: 1 1 0px;
				text-align: center;
			}
		}

		a {
			padding: 12px;
		}
	}

	.socials {
		@include isMobile() {
			display: none;
		}
	}
}

@include isNotMobile() {
	.visible-on-mobile {
		display: none;
	}
}

@include isMobile() {
	.visible-on-mobile {
		display: initial;
	}
}

.info .socials {
	display: flex;
	justify-content: space-around;

	a {
		padding: 12px;
	}

	svg {
		width: 24px;
		height: 24px;
	}
}

.content-wrapper {
	display: flex;
	flex-direction: column;
	min-height: 100%;
	flex-grow: 1;
}

// Prevent overlap with anchor links.
[id] {
	scroll-margin-top: 4rem;
}

body {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
}

.content {
	max-width: 720px;
	width: 93%;
	margin: 0 auto;
	margin-top: 1rem;
	flex-grow: 1;
	align-self: inherit;
	display: flex;
	justify-content: center;
}

a {
	color: $color-link;
	text-decoration: none;

	&:hover {
		color: $color-link-hover;
		text-shadow: 0 0 1px $color-text-shadow;
	}
}

.posts-group {
	display: flex;
	margin-bottom: 2rem;
	line-height: normal;

	@include isMobile() {
		display: block;
	}

	.posts-year {
		padding-top: 6px;
		margin-right: 1.5rem;
		font-size: 1.6em;
		opacity: 0.6;

		@include isMobile() {
			margin-right: 0;
		}
	}

	.posts-list {
		flex-grow: 1;
		margin: 0;
		padding: 0;
		list-style: none;

		.post-item {
			border-bottom: 1px $post-item-border-bottom dashed;
		}
	}
}

.subheader {
	margin: 1rem 0;
	display: block;
}

.feather {
	display: inline-block;
	vertical-align: -0.125em;
	width: 1em;
	height: 1em;
}

.app-footer {
	text-align: center;
	font-size: 0.9em;
}

.hero-card {
	display: flex;
	align-items: center;
	justify-content: center;

	@include isMobile() {
		flex-direction: column-reverse;
	}

	> * {
		padding: 1rem;
	}

	.info {
		text-align: center;

		> * {
			white-space: nowrap;
		}

		h1 {
			font-size: 2rem;
		}

		h2 {
			font-size: 1.5rem;
		}
	}

	img.avatar {
		width: 15rem;
		height: 15rem;
		border-radius: 15rem;
	}
}

.wrappable-container {
	display: flex;
	justify-content: space-between;
	align-items: baseline;
	padding: 12px 0;

	> * {
		white-space: nowrap;
	}

	> :first-child {
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		min-width: 0;
		margin-right: 1rem;
	}
}

.error-404 {
	text-align: center;
}

.img-404 {
	svg {
		height: 10rem;
	}
}

main {
	width: 100%;
	max-width: 100%;
}

.page-header {
	display: flex;
	align-items: center;
	a {
		margin-left: 1rem;
	}
}

